--- a/MDT-week2.csproj
+++ b/MDT-week2.csproj
@@ -1,268 +1,9 @@
-using System;
+public static void Main(string[] args) {
 
-namespace EX
-{
-    class Circle
-    {
+      console.Writeline("Hello World");
 
-        static string Character(string character)
-        {
-            string b = ("Character A (SSR)");
-            return b;
-        }
+      
 
-        static string Character2(string character)
-        {
-            string b = ("Character B (SR)");
-            return b;
-        }
 
-        static string Character3(string character)
-        {
-            string b = ("Character C (SR)");
-            return b;
-        }
 
-        static string Character4(string character)
-        {
-            string b = ("Character D (SR)");
-            return b;
-        }
-
-        static string Character5(string character)
-        {
-            string b = ("Character E (SR)");
-            return b;
-        }
-
-        static string Character6(string character)
-        {
-            string b = ("Character F (R)"); 
-            return b;
-        }
-
-        static string Character7(string character)
-        {
-            string b = ("Character D (R)"); 
-            return b;
-        }
-
-        static string Character8(string character)
-        {
-            string b = ("Character E (R)"); 
-            return b;
-        }
-
-        static string Character9(string character)
-        {
-            string b = ("Character H (R)"); 
-            return b;
-        }
-
-        static string Character10(string character)
-        {
-            string b = ("Character I (R)"); 
-            return b;
-        }
-
-        static string Character11(string character)
-        {
-            string b = ("Character J (R)"); 
-            return b;
-        }
-        static string Character12(string character)
-        {
-            string b = ("Character K (R)"); 
-            return b;
-        }
-
-
-          static void Main()
-        {
-
-            double a;
-
-            double P = 10;
-
-            string character_name;
-
-
-            Console.WriteLine("List of Character");
-            Console.WriteLine();
-
-            
-
-            character_name = ("");
-            Console.Write(" 1. |");
-            Console.WriteLine("{0}", Character(character_name));
-            character_name = ("");
-            Console.Write(" 2. |");
-            Console.WriteLine("{0}", Character2(character_name));
-            character_name = ("");
-            Console.Write(" 3. |");
-            Console.WriteLine("{0}", Character3(character_name));
-            character_name = ("");
-            Console.Write(" 4. |");
-            Console.WriteLine("{0}", Character4(character_name));
-            character_name = ("");
-            Console.Write(" 5. |");
-            Console.WriteLine("{0}", Character5(character_name));
-            character_name = ("");
-            Console.Write(" 6. |");
-            Console.WriteLine("{0}", Character6(character_name)); 
-            character_name = ("");
-            Console.Write(" 7. |");
-            Console.WriteLine("{0}", Character7(character_name));
-            character_name = ("");
-            Console.Write(" 8. |");
-            Console.WriteLine("{0}", Character8(character_name));
-            character_name = ("");
-            Console.Write(" 9. |");
-            Console.WriteLine("{0}", Character9(character_name));
-            character_name = ("");
-            Console.Write(" 10.|");
-            Console.WriteLine("{0}", Character10(character_name));
-            character_name = ("");
-            Console.Write(" 11.|");
-            Console.WriteLine("{0}", Character11(character_name));
-            character_name = ("");
-            Console.Write(" 12.|");
-            Console.WriteLine("{0}", Character12(character_name)); // List ตัวละคร
-
-
-
-
-
-
-
-            Console.Write("Input = ");
-
-            a = double.Parse(Console.ReadLine());
-
-           
-
-            Console.WriteLine("Number of Rolls(Max 10) = {0}", a);
-
-            if (a <= 10 & a >= 1)
-  
-                  for (P = 1; P <= a; P++ )
-                  {
- 
-                    Random random = new Random();
-
-                    int w;
-                    w = random.Next(1, 101);
-
-
-                    if ( w>=1 & w<=2 )
-
-                        Console.WriteLine("You recruit Character (SSR) {0}", Character(character_name));
-
-                    if (w >= 3 & w <= 11)
-                    {
-
-                        Random SRchara = new Random();
-
-                        int SuperRarecharacter;
-                        SuperRarecharacter = random.Next(1, 5);
-
-                        
-                        if (SuperRarecharacter == 1)
-
-                            Console.WriteLine("You recruit Character ( SR ) {0}", Character2(character_name));
-                        if (SuperRarecharacter == 2)
-
-                            Console.WriteLine("You recruit Character ( SR ) {0}", Character3(character_name));
-                        if (SuperRarecharacter == 3)
-
-                            Console.WriteLine("You recruit Character ( SR ) {0}", Character4(character_name));
-                        if (SuperRarecharacter == 4)
-
-                            Console.WriteLine("You recruit Character ( SR ) {0}", Character5(character_name));
-
-                    }
-                        
-                    if ( w >= 12 & w <= 100)
-                    {
-                        Random Rchara = new Random();
-
-                        int RareCharacter = random.Next(1, 7);
-
-                        if (RareCharacter == 1)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character6(character_name));
-                        
-                        if (RareCharacter == 2)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character7(character_name));
-                        
-                        if (RareCharacter == 3)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character8(character_name));
-                        
-                        if (RareCharacter == 4)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character9(character_name));
-                        
-                        if (RareCharacter == 5)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character10(character_name));
-                        
-                        if (RareCharacter == 6)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character11(character_name));
-                        
-                        if (RareCharacter == 7)
-
-                            Console.WriteLine("You recruit Character (Rare) {0}", Character12(character_name));
-
-
-                    }
-                    
-                    Console.WriteLine(w);
-                    Console.WriteLine();
-
-                  }
-
-            else
-
-                Console.WriteLine("Please Insert number between 1 to 10");
-
-
-
-
-
-
-
-
-
-
-
-
-
-          
-
-
-
-
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    }
 }
-
